--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -167,7 +167,7 @@
     <section class="carousel">
         <img src="c:\Users\edgar\Downloads\frente_temer.jpeg" alt="Temerario Frente">
         <img src="c:\Users\edgar\Downloads\lado_temer.jpg" alt="Temerario Lateral">
-        <img src="c:\Users\edgar\Downloads\s3.webp" alt="Temerario Interior">
+        <img src="https://raw.githubusercontent.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/refs/heads/gh-pages/s3.webp" alt="Temerario Interior">
     </section>
     
     <section class="video">
