--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -149,7 +149,7 @@
             <h2>TEMERARIO</h2>
             <p>Lamborghini presenta el Temerario, el primer superdeportivo de la historia de la marca de Sant’Agata Bolognese, equipado con un motor V8 biturbo combinado con tres motores eléctricos que ofrece una potencia máxima total de 920 CV. El segundo vehículo de la gama HPEV (vehículo eléctrico de alto rendimiento) se sitúa en la cumbre del placer de conducción gracias a unas prestaciones y un confort únicos en su categoría. Además, estrena nuevos cánones estilísticos en cuanto a diseño, ofreciendo posibilidades de personalización sin precedentes y contenidos inéditos de conectividad.</p>
         </div>
-        <img src="c:\Users\edgar\Downloads\sketch1.webp" alt="Alessandro Veloci">
+        <img src="https://raw.githubusercontent.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/refs/heads/gh-pages/sketch1.webp" alt="Alessandro Veloci">
     </section>
     
     <section class="specs">
