--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -166,7 +166,7 @@
     
     <section class="carousel">
         <img src="c:\Users\edgar\Downloads\frente_temer.jpeg" alt="Temerario Frente">
-        <img src="c:\Users\edgar\Downloads\lado_temer.jpg" alt="Temerario Lateral">
+        <img src="https://github.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/blob/gh-pages/lado_temer.jpg?raw=true" alt="Temerario Lateral">
         <img src="https://raw.githubusercontent.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/refs/heads/gh-pages/temerario_08.webp" alt="Temerario Interior">
     </section>
     
