--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -165,7 +165,7 @@
     </section>
     
     <section class="carousel">
-        <img src="c:\Users\edgar\Downloads\frente_temer.jpeg" alt="Temerario Frente">
+        <img src="https://github.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/blob/gh-pages/frente_temer.jpeg?raw=true" alt="Temerario Frente">
         <img src="https://github.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/blob/gh-pages/lado_temer.jpg?raw=true" alt="Temerario Lateral">
         <img src="https://raw.githubusercontent.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/refs/heads/gh-pages/temerario_08.webp" alt="Temerario Interior">
     </section>
