--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -21,7 +21,7 @@
             font-weight: bold;
         }
         .hero {
-            background: url('c:\Users\edgar\Downloads\images (1).jpg') no-repeat center center/cover;
+            background: url('https://es.vecteezy.com/arte-vectorial/20502472-lamborghini-marca-logo-coche-simbolo-blanco-diseno-italiano-automovil-vector-ilustracion-con-negro-antecedentes') no-repeat center center/cover;
             height: 80vh;
             display: flex;
             justify-content: center;
