--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-weight: bold;
         }
         .hero {
-            background: url('https://es.vecteezy.com/arte-vectorial/20502472-lamborghini-marca-logo-coche-simbolo-blanco-diseno-italiano-automovil-vector-ilustracion-con-negro-antecedentes') no-repeat center center/cover;
+            background: url('https://github.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/blob/gh-pages/fondo.jpg?raw=true') no-repeat center center/cover;
             height: 80vh;
             display: flex;
             justify-content: center;
