--- a/LAMBORGHINI.html
+++ b/LAMBORGHINI.html
@@ -60,7 +60,7 @@
         }
         .cta a {
             text-decoration: none;
-            color: white;
+            color: black;
             background: red;
             padding: 15px 30px;
             border-radius: 5px;
