--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-weight: bold;
         }
         .hero {
-            background: url('https://github.com/EdgarJazyel/LAMBORGHINI-TEMERARIO/blob/gh-pages/fondo.jpg?raw=true') no-repeat center center/cover;
+            background: url('') no-repeat center center/cover;
             height: 65vh;
             display: flex;
             justify-content: center;
